<resources>
    <string name="app_name">SpaceTronautX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_launch_title">Latest Launch</string>
    <string name="content">spaco</string>
    <string name="latest_launch_rocket">Transporter-1</string>
    <string name="description">Mission Description:</string>

    <string name="launchDate">Launch Date: 2021-01-24
T10:00:00-05:00</string>
    <string name="details">SpaceX will launch the first of two next generation high power S-band broadcast satellites for SiriusXM. The spacecraft will be delivered into a geostationary transfer orbit and the booster will be recovered downrange. The spacecraft is built by Space Systems Loral (SSL) on the SSL 1300 platform and includes two solar arrays producing 20kW, and an unfurlable antenna dish. SXM-7 will replace XM-3 in geostationary orbit.</string>
    <string name="rocketInfo">Rocket Info</string>
    <string name="UpcomingLaunch">Upcoming Launch</string>
</resources>