<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.LatestLaunch">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CB201C1C"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/UpcomingLaunch"
                android:textAppearance="@style/TextAppearance.ToolBarTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.appbar.MaterialToolbar>


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/upcomingLaunch_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/latest_launch_rocket"
                    android:textAppearance="@style/TextAppearance.Title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Media -->
                <ImageView
                    android:id="@id/patch"
                    android:layout_width="250dp"
                    android:layout_height="194dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="rock"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/upcomingLaunch_title" />


                <TextView
                    android:id="@+id/launchDateUpcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/launchDate"
                    android:textAppearance="@style/TextAppearance.SubTitles"
                    android:textColor="@color/peach"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/patch" />

                <View
                    android:id="@+id/dividerDate"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/peach"
                    app:layout_constraintBottom_toBottomOf="@+id/launchDateUpcoming" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/dividerDate"
                    tools:layout_editor_absoluteX="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="250dp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <!-- Title, secondary and supporting text -->


                            <TextView
                                android:id="@+id/descriptionTitle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:gravity="center_horizontal"
                                android:text="@string/description"
                                android:textAppearance="@style/TextAppearance.SubTitles"
                                android:textColor="@color/peach"

                                />

                            <TextView
                                android:id="@+id/description"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:text="@string/details"
                                android:textColor="@color/peach" />

                            <View
                                android:id="@+id/dividerDescription"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="15dp"
                                android:background="@color/peach"
                                app:layout_constraintBottom_toBottomOf="@+id/description" />

                            <TextView
                                android:id="@+id/payloadTitle"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="25dp"
                                android:gravity="center_horizontal"
                                android:text="Payload:"
                                android:textAppearance="@style/TextAppearance.SubTitles"
                                android:textColor="@color/peach"

                                />

                            <TextView
                                android:id="@+id/payloadDetails"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="16dp"
                                android:gravity="center_horizontal"
                                android:text="Satelite, Customer: Unites States"
                                android:textColor="@color/peach" />

                            <Button
                                android:id="@+id/rocketInfoButton"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/rocketInfo" />


                        </LinearLayout>

                        <!-- Buttons -->

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>